--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "test:e2e": "set NODE_ENV=test && jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node --transpile-only ./node_modules/typeorm/cli.js",
     "typeorm:run": "npm run typeorm -- migration:run -d src/util/typeorm-cli.ts",
-    "typeorm:generate": "npm run typeorm -- migration:generate -d src/util/typeorm-cli.ts"
+    "typeorm:generate": "npm run typeorm -- migration:generate -d src/util/typeorm-cli.ts",
+    "seed": "ts-node -r tsconfig-paths/register src/script/seed-data.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.14.1",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
