--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "set NODE_ENV=test && jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json --forceExit --detectOpenHandles",
+    "test:e2e:setup": "npm run seed && npm run test:e2e",
     "typeorm": "ts-node --transpile-only ./node_modules/typeorm/cli.js",
     "typeorm:run": "npm run typeorm -- migration:run -d src/util/typeorm-cli.ts",
     "typeorm:generate": "npm run typeorm -- migration:generate -d src/util/typeorm-cli.ts",
